mobile alignment fix?

--- a/style.css
+++ b/style.css
@@ -1,18 +1,51 @@
-.desktop-container {
-    width: 100; /* Adjust the width as needed */
-    height: 90vh;
-    display: flex;
-    justify-content: center;
-}
-
 body, h1, ul {
     margin: 0;
     padding: 0;
 }
 
+.desktop-container {
+    width: 100%; /* Adjust the width as needed */
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#subtitles {
+    height: 30px;
+    width: 100%;
+    background-color: white;
+    color: #5C338E;
+    font-size: 16px;
+    font-weight: bold;
+    padding: .5rem .75rem .25rem 3rem;
+    top: 0;
+    z-index: -1;
+}
+
+.fa-solid {
+    color: #471A80;
+    margin: 1rem .25rem;
+}
+
+.fa-solid:hover {
+    color: #5C338E;
+    cursor: pointer;
+}
+
+.mute, .fa-volume-high {
+    cursor: pointer;
+    color: rgba(255, 255, 255, 0.853);
+    z-index: 1;
+}
+
+.mute:hover {
+    color: white;
+}
+
 img {
-    position: fixed;
-    top: 3.75rem;
+    margin-top: 2rem;
     rotate: 5deg;
     height: 200px;
     width: 200px;
@@ -44,15 +77,11 @@ h1, h2 {
 
 .container {
     width: 300px;
-    margin: 0;
+    margin-top: 3rem;
     padding: 8px 20px;
     background-color: #fffffff2;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 label {
@@ -169,7 +198,6 @@ em {
     font-size: 24px;
     filter: blur(0);
     -webkit-filter: blur(0);
-    margin: 3em auto 0 auto;
     position: fixed;
     top: 0;
     left: 0;
@@ -187,8 +215,8 @@ em {
     opacity: 0;
     position: absolute;
     bottom: 0;
-    width: 7em;
-    height: 7em;
+    width: 24em;
+    height: 28em;
 }
 
 @keyframes rise {
@@ -205,32 +233,4 @@ em {
     }
 }
 
-#subtitles {
-    height: 30px;
-    width: 100%;
-    background-color: white;
-    color: #5C338E;
-    font-size: 16px;
-    font-weight: bold;
-    padding: .5rem .75rem .25rem 3rem;
-    position: fixed;
-    top: 0;
-    z-index: -1;
-}
 
-.mute, .fa-volume-high {
-    cursor: pointer; /* Change the cursor to a pointer on hover */
-    right: 0;
-    position: absolute;
-    z-index: 1;
-}
-
-.fa-solid {
-    color: #471A80;
-    margin: 1rem .25rem;
-}
-
-.fa-solid:hover {
-    color: #5C338E;
-    cursor: pointer;
-}
